# ChatGPT-Telegram-Bot

./: .gitignore  Dockerfile.build  bot.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  update.sh
utils/: decorators.py  i18n.py
