[tool.poetry]
name = "chatgpt-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Ilya Belsky <elias.logins@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
python-telegram-bot = {version = "21.0.1", extras = ["webhooks", "rate-limiter", "job-queue"]}
pytz = "^2024.2"
msgspec = "^0.18.6"
pyexecjs = "^1.5.1"
requests = "^2.32.3"
html2text = "^2024.2.26"
fake-useragent = "^1.5.1"
beautifulsoup4 = "^4.12.3"
tiktoken = "0.6.0"
lxml-html-clean = "^0.3.1"
pdfminer-six = "20231228"
duckduckgo-search = "5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
